--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.13.1",
     "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
