--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.30",
+    "expo-datepicker": "^1.0.23",
     "expo-sqlite": "^15.1.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-calendars": "^1.1308.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.13.1",
     "react-native-svg": "^15.11.1"
