--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.30",
     "expo-datepicker": "^1.0.23",
+    "expo-file-system": "^18.0.10",
     "expo-sqlite": "^15.1.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
