--- a/package.json
+++ b/package.json
@@ -27,7 +27,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.3",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
