--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.30",
     "expo-datepicker": "^1.0.23",
     "expo-file-system": "^18.0.10",
+    "expo-permissions": "^14.4.0",
     "expo-sqlite": "^15.1.1",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-calendars": "^1.1308.1",
