--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.30",
-    "expo-datepicker": "^1.0.23",
+    "expo": "~52.0.38",
     "expo-file-system": "^18.0.10",
-    "expo-permissions": "^14.4.0",
-    "expo-sqlite": "^15.1.1",
+    "expo-media-library": "^17.0.6",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-calendars": "^1.1308.1",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.13.1",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,7 +35,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "jest": "^29.7.0",
-    "jest-expo": "^52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
