--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1308.1",
     "react-native-paper": "^5.13.1",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
