--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-big-calendar": "^4.17.1",
     "react-native-calendars": "^1.1308.1",
     "react-native-paper": "^5.13.1",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-svg": "15.8.0",
+    "victory-native": "^41.16.2",
+    "@shopify/react-native-skia": "1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
