--- a/app.json
+++ b/app.json
@@ -28,6 +28,11 @@
       "package": "com.mkjox.habittracker",
       "versionCode": 1
     },
+    "extra": {
+      "eas": {
+        "projectId": "229df36b-e05c-43b0-9db2-8a2b1d724a89"
+      }
+    },
     "owner": "mkjox",
     "plugins": [
       "expo-sqlite"
