--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "~14.0.4",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.38",
+    "expo": "~52.0.47",
     "expo-file-system": "^18.0.10",
     "expo-media-library": "^17.0.6",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-big-calendar": "^4.17.1",
     "react-native-calendars": "^1.1308.1",
     "react-native-paper": "^5.13.1",
@@ -32,7 +32,8 @@
     "react-native-svg": "15.8.0",
     "victory-native": "^41.16.2",
     "@shopify/react-native-skia": "1.5.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
